<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="5dp"
        android:layout_margin="3dp"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/fatTot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:padding="5dp"
        android:layout_margin="3dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wImp"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="5dp"
        android:layout_margin="3dp"
        android:layout_gravity="center"/>
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Imp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:padding="5dp"
        android:layout_margin="3dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/achieve"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="5dp"
        android:layout_margin="3dp"
        android:layout_gravity="center"/>
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/achh"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:padding="5dp"
        android:layout_margin="3dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Wcal"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:padding="5dp"
            android:layout_margin="3dp"
            android:layout_gravity="center"/>
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:padding="5dp"
            android:layout_margin="3dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nor"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:padding="5dp"
            android:layout_margin="3dp"
            android:layout_gravity="center"/>
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nordata"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:padding="5dp"
            android:layout_margin="3dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>
</ScrollView>