<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.teamhimalaya.diettrack.Registration">

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/appName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="5dp"
        android:textSize="50dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:id="@+id/registrationLayout"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/appName"
        android:layout_centerInParent="true">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel1"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:id="@+id/userName"
                android:hint="Name"
                android:textColor="@color/white"
                android:textColorHint="#555"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginTop="5dp"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel1"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:id="@+id/userId"
                android:hint="UserID"
                android:textColor="@color/white"
                android:textColorHint="#555"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginTop="5dp"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel1"
            >


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:textColorHint="#555"
                android:padding="10dp"

                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginTop="5dp"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel1"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:hint="@string/password_hint"
                android:textColor="@color/white"
                android:textColorHint="#555"
                android:padding="10dp"

                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginTop="5dp"

                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/regBtn"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"
            android:background="@drawable/menu_selector"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>
