<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/login_background"
    tools:context="com.teamhimalaya.diettrack.PersonalInfo">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Personal Info"
        android:id="@+id/appName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="5dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:id="@+id/registrationLayout"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/appName"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="3dp"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel1"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:id="@+id/Age"
                android:hint="@string/age"
                android:textColor="@color/white"
                android:textColorHint="#555"
                android:padding="5dp"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginTop="3dp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel1"
            >


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:id="@+id/Weight"
                android:hint="@string/weight"
                android:textColor="@color/white"
                android:textColorHint="#555"
                android:padding="5dp"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginTop="3dp"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel1"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:id="@+id/Height"
                android:hint="@string/height"
                android:textColor="@color/white"
                android:textColorHint="#555"
                android:padding="5dp"

                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginTop="3dp"

                />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="5dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/genderSpinner"
                android:textAlignment="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="Geographical reason"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="5dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/geoSpinner"
                android:textAlignment="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="Activity"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="5dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activitySpinner"

                android:textAlignment="center"
                />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:text="Update"
            android:background="@drawable/menu_selector"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>
